--- a/oss-frontend/src/Components/Background.css
+++ b/oss-frontend/src/Components/Background.css
@@ -1,17 +1,20 @@
 
-
+*{
+  margin: 0;
+  padding: 0;
+  position:"relative";
+  
+}
 .bimage {
-  width: 100%;       /* Container width */
-  height: 50vh;      
+  width: 100%; 
+  height: 65vh;      
   overflow: hidden;  
   display: inline-flex;
-  
+
 }
 
 .bimage img {
-         /* Full width */
-  height: 100%;       /* Full height */
-  object-fit: contain; /* Ensure the entire image is visible */
+  object-fit: contain; 
 }
 
 
