final_Customer_mainpage

--- a/oss-frontend/src/pages/MainPage/RelatedProducts.css
+++ b/oss-frontend/src/pages/MainPage/RelatedProducts.css
@@ -1,5 +1,5 @@
 .bimage {
-    width: 100%;       /* Container width */
+    width: 100%;      
     height: 50vh;      
     overflow: hidden;  
     display: flex;
@@ -7,8 +7,8 @@
   }
   
   .bimage img {
-    width: 500%;        /* Full width */
-    height: 100%;       /* Full height */
-    object-fit: contain; /* Ensure the entire image is visible */
+    width: 500%;       
+    height: 100%;       
+    object-fit: contain; 
   }
   
