--- a/oss-frontend/src/index.css
+++ b/oss-frontend/src/index.css
@@ -1,7 +1,8 @@
 :root {
-  font-family:"Inter", sans-serif;
+  
   line-height: 1.5;
   font-weight: 400;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -28,6 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
 h1 {
@@ -41,7 +43,7 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: "Inter", sans-serif;
+  
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
