--- a/oss-frontend/src/Components/Background.css
+++ b/oss-frontend/src/Components/Background.css
@@ -7,7 +7,7 @@
 }
 .bimage {
   width: 100%; 
-  height: 70vh;      
+  height: 75vh;      /*change */
   overflow: hidden;  
   display: inline-flex;
 
