--- a/oss-frontend/src/components/UpdateProduct/UpdateProduct.css
+++ b/oss-frontend/src/components/UpdateProduct/UpdateProduct.css
@@ -29,14 +29,19 @@
     align-items: center;
     margin-bottom: 20px;
     background-color: #185A9D;
+    color: aliceblue;
+    border-radius: 0.8em;
+    width: 31.5em;
+    height: 3em;
     
 }
   
-.update-popup-header h2 {
+.update-popup-header h3 {
     margin: 0;
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
-    margin-left: 160px;
+    margin-left: 6em;
+    font-weight: 3.5em;
 }
   
 .update-popup-close-btn {
@@ -56,7 +61,6 @@
 .update-product-form label {
     font-size: 14px;
     font-weight: bold;
-    background-color: rgb(255, 249, 249);
     color: #2e2e2e;
 
 }
@@ -65,26 +69,13 @@
 .update-product-form textarea {
     padding: 10px;
     font-size: 14px;
-    border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #ccc;
     color: #2e2e2e;
 }
   
 .update-product-form textarea {
     resize: none;
     height: 80px;
-    background-color: #ccc;
     color: #2e2e2e;
 }
   
-.update-product-btn {
-    padding: 10px;
-    font-size: 16px;
-    background-color: rgb(5, 5, 85);
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 30px;
-}
